--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,6 +18,40 @@
 *= require datepicker
 */
 
+/* states and images */
+.ui-icon {
+  width: 16px;
+  height: 16px;
+}
+.ui-icon,
+.ui-widget-content .ui-icon {
+  background-image: url(/assets/jquery-ui/ui-icons_222222_256x240.png)/*{iconsContent}*/;
+}
+.ui-widget-header .ui-icon {
+  background-image: url(/assets/jquery-ui/ui-icons_222222_256x240.png)/*{iconsHeader}*/;
+}
+.ui-state-default .ui-icon {
+  background-image: url(/assets/jquery-ui/ui-icons_888888_256x240.png)/*{iconsDefault}*/;
+}
+.ui-state-hover .ui-icon,
+.ui-state-focus .ui-icon {
+  background-image: url(/assets/jquery-ui/ui-icons_454545_256x240.png)/*{iconsHover}*/;
+}
+.ui-state-active .ui-icon {
+  background-image: url(/assets/jquery-ui/ui-icons_454545_256x240.png)/*{iconsActive}*/;
+}
+.ui-state-highlight .ui-icon {
+  background-image: url(/assets/jquery-ui/ui-icons_2e83ff_256x240.png)/*{iconsHighlight}*/;
+}
+.ui-state-error .ui-icon,
+.ui-state-error-text .ui-icon {
+  background-image: url(/assets/jquery-ui/ui-icons_cd0a0a_256x240.png)/*{iconsError}*/;
+}
+
+.ui-icon-carat-2-n-s { background-position: -128px 0; }
+.ui-icon-triangle-1-n { background-position: 0 -16px; }
+.ui-icon-triangle-1-s { background-position: -64px -16px; }
+
 .well tr.enq_reg td {background: #e1f5e0 !important; }
 .well tr.fu_week td {background: #f8f4b0 !important; }
 .well tr.fu_now td {background: #f7d0d0 !important; }
@@ -129,6 +163,14 @@ strong.sm{font-size:12px;}
 
 .main .main-content .green-well {
     background-color: #e1f5e0; }
+.main .main-content .green-well1 {
+    background-color: #e1f5e0; }
+.main .main-content .yellow-well {
+    background-color: #f8f4b0; }
+.main .main-content .red-well {
+    background-color: #f7d0d0; }   
+.main .main-content .blue-well0 {
+    background-color: #A4E7FF; } 
   .main .main-content .orange-well {
     background-color: #f9f3ec; }
     .main .main-content .pink-well {
@@ -233,3 +275,92 @@ background-color:#f1c1c1;
   background-color: #fce8d2;
   border: 0px;
 }
+
+.notification-content{
+  width: 350px;
+}
+
+.noty-img img{
+  height: 50px;
+  width: 50px; 
+  float: left;
+  margin-right: 10px;
+  margin-bottom: 10px;
+}
+
+.noty-title{
+  font-size:12px;
+  font-weight:bold;
+}
+.noty-stuff{
+  font-size:11px;
+  font-weight:normal;
+  width: 320px;
+}
+.noty-who{
+  font-size:9px;
+  font-weight:normal;
+  padding-top: 5px;
+}
+
+.noty_unchecked{
+  background-color: #e1f5e0; 
+}
+
+.f-10{
+  font-size:12px;
+  font-weight: bold;
+}
+
+.sm{
+  font-size: 11px; 
+}
+
+.grey-sm{
+  font-size: 10px;
+  color: #666;
+}
+
+.padAll10{
+   padding: 10px 10px 10px 10px;
+}
+
+.rounded{  
+    border-radius: 20%;
+    padding: 10px 10px 10px 10px;    
+    color: #222222;    
+    font-size: 25px; 
+    text-align: center;
+    font-weight: bold;
+}
+
+.l{
+  left: 7px;
+}
+
+.marL30{
+  margin-left: 30px;  
+}
+
+.scrollable{
+  overflow: scroll; /* Scrollbar are always visible */
+  overflow: auto;   
+}
+
+.t3000{
+  width: 2000px;
+}
+
+.bb{border-bottom: 1px solid #dddddd; }
+
+.bblue{
+ color: #008cba;
+ 
+}
+.vmid{
+  vertical-align: middle;
+}
+
+
+
+
