--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -6606,17 +6606,18 @@ button.close {
   padding: 8px 14px;
   margin: 0;
   font-size: 15px;
-  font-weight: normal;
+  font-weight: bold;
   line-height: 18px;
-  background-color: #c6edf5;
+  background-color: #004156;
   border-bottom: 1px solid #888a85;
   border-radius: 5px 5px 0 0;
+  color: #fff;
 
 }
 
 .popover-content {
   padding: 9px 14px;
-  background-color: #eaf4f6;
+  background-color: #fff;
 }
 
 .popover .arrow,
@@ -6627,15 +6628,17 @@ button.close {
   height: 0;
   border-color: transparent;
   border-style: solid;
+  color: #fff;
 }
 
 .popover .arrow {
   border-width: 11px;
+  
 }
 
 .popover .arrow:after {
   border-width: 10px;
-  content: "";
+  content: "";  
 }
 
 .popover.top .arrow {
@@ -6672,11 +6675,11 @@ button.close {
   content: " ";
 }
 
-.popover.bottom .arrow {
+.popover.bottom .arrow {  
   top: -11px;
   left: 50%;
   margin-left: -11px;
-  border-bottom-color: #999999;
+  border-bottom-color: #fff;
   border-bottom-color: rgba(0, 0, 0, 0.25);
   border-top-width: 0;
 }
