reports asso for reg

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -361,6 +361,19 @@ background-color:#f1c1c1;
   vertical-align: middle;
 }
 
+.greendd{
+  color: #555753;
+  background-color: #e1f5e0;
+}
+
+.reddd{
+  color: #555753;
+  background-color: #f7d0d0;
+}
+
+.top{
+vertical-align: top;
+}
 
 
 
